Fix: doc links and more illegible in light mode (#6643)

--- a/src-ui/src/theme.scss
+++ b/src-ui/src/theme.scss
@@ -174,6 +174,10 @@ $form-check-radio-checked-bg-image-dark: url("data:image/svg+xml,<svg xmlns='htt
     border-color: rgba(0,0,0,0) !important;
   }
 
+  .badge.bg-body {
+    background-color: rgba(var(--bs-dark-rgb), var(--bs-bg-opacity)) !important;
+  }
+
   .document-card .card-body.bg-light {
     background-color: var(--bs-body-bg);
   }
